# project-data-platform

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: build.yml
github/workflows/: build.yml
notebooks/: import_magic.ipynb  pd_sc.ipynb
project_data_platform/: supply.py
src/: atoms.py  helloworld.py  okf.py  pd_sc.py  stage_graph.py  supply.py
src/ui/: .gitignore  README.md  index.html  package.json  pyproject.toml  tsconfig.json  webpack.config.js
src/ui/src/py/: input-data.json  style.css
src/ui/src/ts/: elements.ts  graph.ts  html-utils.ts  index.ts  tooltips.ts
src/ui/static/: input-data-cookies.json  james-kitchen.json  roberts-dessert-kitchen.json  tims-tasty-treats-kitchen.json
tools/ok_validator/: README.md  __init__.py  okh.py  pyproject.toml  validate.py
tools/ok_validator/src/: okh.py  validate.py
tools/ok_validator/tests/: conftest.py  test_okh.py  test_validate.py
tools/okparser/: README.rst  cli.py  parser.py  utils.py
tools/okparser/src/: cli.py  parser.py  utils.py
tools/okparser/tests/: test_parser.py  test_utils.py
