[tool.poetry]
name = "project-data-platform"
version = "0.1.0"
description = ""
authors = ["lynn pepin <lynn@lynndotpy.xyz>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
yamale = "^4.0.4"
sympy = "^1.11.1"
typer = "^0.7.0"
rich = "^13.3.1"
requests = "2.28.2"

[tool.poetry.scripts]
okparser = "tools.okparser.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
