[tool.poetry]
name = "project-data-platform"
version = "0.1.0"
description = ""
authors = ["lynn pepin <lynn@lynndotpy.xyz>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
yamale = "^4.0.4"
sympy = "^1.11.1"
typer = "^0.7.0"
rich = "^13.3.1"
requests = "2.28.2"
ghapi = "1.0.3"

[tool.poetry.group.dev.dependencies]
poetry = "^1.4.2"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pyright = "^1.1.229"
darglint = "^1.8.1"
black = "^22.10.0"
ruff = "^0.0.244"

[tool.poetry.scripts]
okparser = "tools.okparser.src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
