[tool.poetry]
name = "project-data-platform"
version = "0.1.0"
description = ""
authors = ["Helpful Engineering <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
yamale = "^4.0.4"
sympy = "^1.12"
typer = "^0.9.0"
rich = "^13.5.2"
requests = "^2.31.0"
ghapi = "^1.0.4"
azure-storage-blob = "^12.17.0"
azure-identity = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pyright = "^1.1.322"
darglint = "^1.8.1"
black = "^23.7.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
