[tool.poetry]
name = "project-data-visualizations"
version = "0.1.0"
description = ""
authors = ["timr11 <timromanski@gmail.com>"]
readme = "README.md"
packages = [{include = "project_data_visualizations"}]

[tool.poetry.dependencies]
python = "^3.11"
notebookjs = "^0.1.4"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
